# photonEmission_hydroInterface

./: .gitignore  Arsenal.cpp  Arsenal.h  BjorkenExpansion.cpp  BjorkenExpansion.h  CMakeLists.txt  EOS.cpp  EOS.h  GNUmakefile  Hydroinfo_h5.cpp  Hydroinfo_h5.h  OSCARreader.cpp  OSCARreader.h  PhotonEmission.cpp  PhotonEmission.h  README.md  Table.cpp  ThermalPhoton.cpp  ThermalPhoton.h  compile.sh  gauss.cpp  main.cpp  make_photon_emission  parameter.h  tensor_trans.cpp  tensor_trans.h
old_src/: BjorkenExpansion.h
ph_rates/: sum_up_all_HG_channels.py
ph_rates_s95p-v1-PCE150/: sum_up_all_HG_channels.py
src/: Arsenal.cpp  Arsenal.h  CMakeLists.txt  DileptonQGPLO.cpp  DileptonQGPLO.h  DileptonQGPNLO.cpp  DileptonQGPNLO.h  GNUmakefile  HadronGasPiRhoOmega.cpp  HadronGasPiRhoOmega.h  HadronGasPipiBremsstrahlung.cpp  HadronGasPipiBremsstrahlung.h  HadronGasRhoSpectralFunction.cpp  HadronGasRhoSpectralFunction.h  Hydroinfo_MUSIC.cpp  Hydroinfo_MUSIC.h  Hydroinfo_h5.cpp  Hydroinfo_h5.h  ParameterReader.cpp  ParameterReader.h  PhotonEmission.cpp  PhotonEmission.h  QGP2to2Total.cpp  QGP2to2Total.h  QGPAMYCollinear.cpp  QGPAMYCollinear.h  Stopwatch.h  Table2D.cpp  Table2D.h  ThermalDilepton.cpp  ThermalDilepton.h  ThermalPhoton.cpp  ThermalPhoton.h  data_struct.h  gauss_quadrature.cpp  gauss_quadrature.h  hydro_photonEmission.e  main.cpp  tensor_trans.cpp  tensor_trans.h
src/old_src/: BjorkenExpansion.cpp  BjorkenExpansion.h  EOS.cpp  EOS.h  Table.cpp  Table.h
utilities/: generate_jobs.py  make_plots.py
